--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<section class="header">
 		<div class="container">
-			<div class="flex-header">
+			<div class="flex-container flex-header">
 				<div class="flex-item1"><div class="gp"></div></div>
 				<div class="flex-item7"><div class="nav-menus"></div></div>
 				<div class="flex-item2"><div class="getstarted"></div>
@@ -17,16 +17,21 @@
 		</div>
 	</section>
 	<section class="banner">
-		<div class="flex-item6">
-					<div class="text"></div></div>
+		<div class="container">
+			<div class="flex-container flex-banner1">
+		<div class="flex-item12">
+					<div class="text"></div>
 					<div class="container">
-						<div class="flex-banner">
+						<div class="flex-container flex-banner">
 							<div class="flex-item2"><div class="icons"></div></div>
 							<div class="flex-item2"><div class="icons"></div></div>
 							<div class="flex-item2"><div class="icons"></div></div>
 							<div class="flex-item2"><div class="icons"></div></div>
 							<div class="flex-item2"><div class="icons"></div></div>
 				</div>
+			</div>
+		</div>
+			</div>
 			</div>
 	</section>
 	<section class="content">
@@ -48,7 +53,6 @@
 				<div class="flex-item2"><div class="client1"></div></div>
 			</div>
 		</div>
-		
 	</section>
 	<section class="content1">
 		<div class="container">
@@ -70,41 +74,43 @@
 				<div class="flex-item4"><div class="service1"></div></div>	
 			</div>
 		</div>
-		
 	</section>
 <section class="banner2">
-		<div class="flex-item6">
+	<div class="container">
+		<div class="flex-container flex-banner1">
+		<div class="flex-item12">
 					<div class="text1"></div></div>
+				</div>
+			</div>
 	</section>
 	<section class="portfolio">
 		<div class="container">
 			
-			<div class="flex-portfolio">
-				<div class="flex-item4"><div class="portfolio1"></div></div>
-				<div class="flex-item4"><div class="portfolio2"></div></div>
-				<div class="flex-item4"><div class="portfolio3"></div></div>
-				<div class="flex-item4"><div class="portfolio4"></div></div>
-				<div class="flex-item4"><div class="portfolio5"></div></div>
-				<div class="flex-item4"><div class="portfolio6"></div></div>
-				<div class="flex-item4"><div class="portfolio7"></div></div>
-				<div class="flex-item4"><div class="portfolio8"></div></div>
-				<div class="flex-item4"><div class="portfolio9"></div></div>
-				</div>
-
+			<div class="flex-container flex-portfolio">
+				<div class="flex-item4"><div class="portfolio1"></div><div class="portfolio2"></div></div>
+				<div class="flex-item4"><div class="portfolio3"></div><div class="portfolio4"></div><div class="portfolio5"></div></div>
+				<div class="flex-item4"><div class="portfolio6"></div><div class="portfolio7"></div><div class="portfolio8"></div><div class="portfolio9"></div></div>
+			</div>
 		</div>
 	</section>
 	<section class="content2">
 		<div class="container">
 			<div class="flex-container">
 				<div class="flex-item5"><div class="image"></div></div>
-				<div class="flex-item7"><div class="para"></div></div>
-			</div>
-		</div>
-		
+				<div class="flex-item7"><div class="para"></div>
+				<div class="flex-container">
+					<div class="flex-item6"><div class="one"></div><div class="two"></div></div>
+					<div class="flex-item6"><div class="three"></div><div class="four"></div></div>
+				</div></div></div>
+	</div>
 	</section>
 	<section class="banner3">
-		<div class="flex-item6">
+		<div class="container">
+			<div class="flex-container flex-banner1">
+		<div class="flex-item12">
 					<div class="text2"></div></div>
+				</div>
+			</div>
 	</section>
 	<section class="authors">
 		<div class="container">
@@ -123,7 +129,8 @@
 					<div class="map"></div></div>
 					<div class="container">
 						<div class="flex-container">
-							<div class="flex-item4"><div class="contactdetails"></div></div>
+							<div class="flex-item4"><div class="location"></div><div class="email"></div><div class="call"></div>
+						</div>
 							<div class="flex-item8"><div class="personaldetails"></div></div>
 				</div>
 			</div>
@@ -150,12 +157,10 @@
 	</section>
 	<section class="footer">
 		<div class="container">
-			<div class="flex-footer">
+			<div class="flex-container flex-footer">
 				<div class="flex-item4"><div class="copywright"></div></div>
 		</div>
 		</div>
-		
 	</section>
-
 </body>
 </html>
