--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<section class="content">
 		<div class="container">
 			<div class="flex-container">
-				<div class="flex-item6"><div class="para"></div></div>
+				<div class="flex-item6"><div class="para1"></div></div>
 				<div class="flex-item6"><div class="image"></div></div>
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 		<div class="container">
 			<div class="flex-container">
 				<div class="flex-item6"><div class="image"></div></div>
-				<div class="flex-item6"><div class="para"></div></div>
+				<div class="flex-item6"><div class="para1"></div></div>
 			</div>
 		</div>
 	</section>
